# Superconductivity

./: .gitignore  .gitmodules  LHJG__Supraleitung_3_mag_field_with_grounds_tops_nether  LHJG__Supraleitung_4_mag_field_with_grounds_tops_nether  README.md  requirements.txt
SC-Latex/: .latexmkrc  __references__.bib  results.tex  setup.tex
SC_Python/: ext_api.py  pyproject.toml
SC_Python/mySC/: Dataviewer.py  config.py
SC_Python/src/mySC/: config.py
sc_data/: Druck_Spaunung_Korrelation.py  calibration_UAB_T_normalfluid.npz  calibration_UAB_T_superfluid.npz
sc_data/clean/: LHJG__Supraleitung_0.meta.json  LHJG__Supraleitung_0.npz  LHJG__Supraleitung_1.meta.json  LHJG__Supraleitung_1.npz  LHJG__Supraleitung_10.meta.json  LHJG__Supraleitung_10.npz  LHJG__Supraleitung_11.meta.json  LHJG__Supraleitung_11.npz  LHJG__Supraleitung_12.meta.json  LHJG__Supraleitung_12.npz  LHJG__Supraleitung_13.meta.json  LHJG__Supraleitung_13.npz  LHJG__Supraleitung_14.meta.json  LHJG__Supraleitung_14.npz  LHJG__Supraleitung_15.meta.json  LHJG__Supraleitung_15.npz  LHJG__Supraleitung_2.meta.json  LHJG__Supraleitung_2.npz  LHJG__Supraleitung_3.meta.json  LHJG__Supraleitung_3.npz  LHJG__Supraleitung_4.meta.json  LHJG__Supraleitung_4.npz  LHJG__Supraleitung_5.meta.json  LHJG__Supraleitung_5.npz  LHJG__Supraleitung_6.meta.json  LHJG__Supraleitung_6.npz  LHJG__Supraleitung_7.meta.json  LHJG__Supraleitung_7.npz  LHJG__Supraleitung_8.meta.json  LHJG__Supraleitung_8.npz  LHJG__Supraleitung_9.meta.json  (+1 more)
sc_latex/: __main__.tex  __preamble__.tex  __preamble_mpl__.tex  conclusion.tex  theory.tex
(+15 files in other folders)
