[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mySC"
version = "0.1.0"
description = "F-Praktikum Superconductivity PyThon realisation"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{ name = Arne Bolsenkötter }]
license = { text = "MIT" }
dependencies = [ "numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7", "pandas>=2.0", ]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "ipykernel"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mySC*"]

[project.scripts]
sc-dataviewer = "mySC.Dataviewer:main"
